fixed animated overflow

--- a/style.css
+++ b/style.css
@@ -21,8 +21,47 @@ body{
     height: 420px;
     background-color: #1c1c1c;
     border-radius: 8px;
+    overflow: hidden;
 }
 
+.box::before{
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg,transparent,
+    transparent,#45f3ff,#45f3ff,#45f3ff);
+    z-index: 1;
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+}
+.box::after{
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg,transparent,
+    transparent,#45f3ff,#45f3ff,#45f3ff);
+    z-index: 1;
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+    animation-delay: ;
+}
+@keyframes animate
+{
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    100%
+    {
+        transform: rotate(360deg);
+    }
+}
 .box form{
     position: absolute;
     inset: 4px;
@@ -131,4 +170,9 @@ body{
     font-weight: 600;
     width: 100px;
     margin-top: 10px;
+}
+
+.box form input[type="submit"]:active
+{
+    opacity: 0.8;
 }
